fix(Home): remove unwanted overflow & set some titles style

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -8,6 +8,7 @@
   width: 100vw;
   height: 120px;
   border-bottom: thin solid rgba($color-border, .4);
+  overflow-x: hidden;
 
   // Responsive
   @media only screen and (max-width: 868px) {
